2004-11-05  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* tramp.el (tramp-coding-commands): Additionally try "uudecode -o
	/dev/stdout" before trying "uudecode -o -".  Suggested by Han
	Boetes.
	(tramp-uudecode): Mention `uudecode -o /dev/stdout'.

2004-07-06  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* tramp.el (tramp-handle-file-newer-than-file-p): Reverse logic.
	From Andrew J. Korty <ajk@iu.edu>.

2004-10-23  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* tramp-vc.el (vc-do-command): Do not advise it if
	process-file is fboundp.
	* tramp.el (tramp-file-name-handler-alist): Add entry for
	process-file.
	(tramp-handle-process-file): New function.
	(tramp-file-name-for-operation): Support process-file.

2004-10-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-advice-PC-do-completion): Make the
	advice less fragile.  Surround temporary redefinition of
	`substitute-in-file-name' with `unwind-protect'.  Suggested by
	Matt Hodges <MPHodges@member.fsf.org>.

2004-10-15  John Paul Wallington  <jpw@gnu.org>

	* tramp.el (top): Set `edebug-form-spec' property directly rather
	than calling `def-edebug-spec'.

2004-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-advice-PC-do-completion): Don't activate
	advice during definition.  This is done later on, depending on
	test result of `substitute-in-file-name'.  Suggested by Stefan
	Monnier <monnier@iro.umontreal.ca>.

2004-10-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Apply `def-edebug-spec' only if function is
	defined.  This is not the case for XEmacs without package
	"edebug".
	(tramp-set-auto-save-file-modes): Set permissions of autosaved
	remote files to the permissions of the original file.  This is not
	the case for Emacs < 21.3.50 and XEmacs < 21.5.  Add function to
	`auto-save-hook'.  Reported by Thomas Prokosch <thomas@nadev.net>.

2004-10-10  Kai Grossjohann  <kai.grossjohann@gmx.net>
